Add creationTime and lastModificationTime to all objects
